--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 Error handling
-Subparsers
+Subparsers (will be used in the implementation of macros)
 Cleanup
 Error recovery?
 Conditional rules? (would be used to allow for the generation of the "rustcore" profile)
