--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
-Error handling
+Current concerns:
+Error handling (WIP)
 Subparsers (will be used in the implementation of macros)
 Cleanup
+Documentation
+
+Future endeavors:
 Error recovery?
 Conditional rules? (would be used to allow for the generation of the "rustcore" profile)
